Incognito/src/parser/Incognito.java
package parser;

import lexer.*;
import symboltable.SymbolTable;
import syntaxtree.*;
import visitor.PrettyPrintVisitor;
import visitor.SymbolTableConstructor;
import visitor.TypeCheckingVisitor;

/* Generated By:JavaCC: Do not edit this line. Incognito.java */
public class Incognito implements IncognitoConstants {
    public static void main(String args[]) throws ParseException
    {
        Incognito parser = null;

        if (args.length == 0){
                System.out.println("Incognito: No input file.");
        }
        else if (args.length == 1) {
                System.out.println("Incognito: Reading from file " + args[0] + " ...");
                try {
                        parser = new Incognito(new java.io.FileInputStream(args[0]));
                }
                catch (java.io.FileNotFoundException e) {
                        System.out.println("Incognito: File " + args[0] + " not found.");
                        return;
                }
        }

        try
        {
        	Program root = parser.Goal();
        	System.out.println("Incognito: MiniJava program parsed successfully.\n\n");
        	
        	PrettyPrintVisitor ppv = new PrettyPrintVisitor();
        	root.accept(ppv);
        	
        	SymbolTableConstructor stc = new SymbolTableConstructor();
        	root.accept(stc);
        	SymbolTable table = stc.getSymbolTable();
        	System.out.println("Incognito: Symbol Table created.");
        	
        	TypeCheckingVisitor typeChecker = new TypeCheckingVisitor();
        	typeChecker.setSymbolTable(table);
        	root.accept(typeChecker);
        	System.out.println("Incognito: Checagem de tipos concluida.");
        }
        catch (ParseException e)
        {
            System.out.println(e.getMessage());
            System.out.println("Incognito: Encountered errors during parse.");
        }
    }

  static final public Program Goal() throws ParseException {
        ClassDeclList classDeclList = new ClassDeclList();
        ClassDecl classDecl;
        MainClass mainclass;
    mainclass = MainClass();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      classDecl = ClassDecl();
                                                  classDeclList.addElement(classDecl);
    }
    jj_consume_token(0);
          {if (true) return new Program(mainclass, classDeclList);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
        Token t;
        Identifier id1;
        Identifier id2;
        Statement statement;
    jj_consume_token(CLASS);
    t = jj_consume_token(ID);
                                                 id1 = new Identifier(t.image);
    jj_consume_token(LCURLYBRACE);
    jj_consume_token(MAIN);
    jj_consume_token(L_PARENTHESIS);
    jj_consume_token(STRING_ARRAY);
    t = jj_consume_token(ID);
                                                 id2 = new Identifier(t.image);
    jj_consume_token(R_PARENTHESIS);
    jj_consume_token(LCURLYBRACE);
    statement = Statement();
    jj_consume_token(RCURLYBRACE);
    jj_consume_token(RCURLYBRACE);
          {if (true) return new MainClass(id1, id2, statement);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
        VarDecl varDecl;
        VarDeclList varDeclList = new VarDeclList();
        MethodDecl methodDecl;
        MethodDeclList methodDeclList = new MethodDeclList();
        Token t;
        Identifier id1;
        Identifier id2 = null;
        ClassDecl classDecl;
        boolean extended = false;
    jj_consume_token(CLASS);
    t = jj_consume_token(ID);
                                  id1 = new Identifier(t.image);
    if (jj_2_2(2)) {
      jj_consume_token(EXTENDS);
      t = jj_consume_token(ID);
                                  id2 = new Identifier(t.image);
                                          extended = true;
    } else {
      ;
    }
    jj_consume_token(LCURLYBRACE);
    label_2:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_2;
      }
      varDecl = VarDecl();
                                                  varDeclList.addElement(varDecl);
    }
    label_3:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_3;
      }
      methodDecl = MethodDecl();
                                                          methodDeclList.addElement(methodDecl);
    }
    jj_consume_token(RCURLYBRACE);
                if(extended)
                        classDecl = new ClassDeclExtends(id1, id2, varDeclList, methodDeclList);
                else
                        classDecl = new ClassDeclSimple(id1, varDeclList, methodDeclList);

                {if (true) return classDecl;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
        Token t;
        Identifier id;
        Type type;
    type = Type();
    t = jj_consume_token(ID);
                                  id = new Identifier(t.image);
    jj_consume_token(SEMICOLON);
          {if (true) return new VarDecl(type, id);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
        Type type;
        Token t;
        Identifier id;
        FormalList formalList;
        VarDeclList varDeclList = new VarDeclList();
        VarDecl varDecl;
        StatementList statementList = new StatementList();
        Statement statement;
        Exp exp;
    jj_consume_token(PUBLIC);
    type = Type();
    t = jj_consume_token(ID);
                                                                  id = new Identifier(t.image);
    jj_consume_token(L_PARENTHESIS);
    formalList = FormalList();
    jj_consume_token(R_PARENTHESIS);
    jj_consume_token(LCURLYBRACE);
    label_4:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_4;
      }
      varDecl = VarDecl();
                                                          varDeclList.addElement(varDecl);
    }
    label_5:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_5;
      }
      statement = Statement();
                                                  statementList.addElement(statement);
    }
    jj_consume_token(RETURN);
    exp = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RCURLYBRACE);
          {if (true) return new MethodDecl(type, id, formalList, varDeclList, statementList, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
        Token t;
        Identifier id;
        Type type;
        FormalList formalList = new FormalList();
        Formal formal;
    if (jj_2_8(2)) {
      type = Type();
      t = jj_consume_token(ID);
                id = new Identifier(t.image);
                formalList.addElement(new Formal(type, id));
      label_6:
      while (true) {
        if (jj_2_7(2)) {
          ;
        } else {
          break label_6;
        }
        formal = FormalRest();
                                                 formalList.addElement(formal);
      }
          {if (true) return formalList;}
    } else {
          {if (true) return formalList;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalRest() throws ParseException {
        Token t;
        Identifier id;
        Type type;
    jj_consume_token(COMMA);
    type = Type();
    t = jj_consume_token(ID);
                id = new Identifier(t.image);
                {if (true) return new Formal(type, id);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
        Type type;
        Token t;
    if (jj_2_9(2)) {
      jj_consume_token(INT_ARRAY);
                                  {if (true) return new IntArrayType();}
    } else if (jj_2_10(2)) {
      jj_consume_token(BOOLEAN);
                                  {if (true) return new BooleanType();}
    } else if (jj_2_11(2)) {
      jj_consume_token(INT);
                                  {if (true) return new IntegerType();}
    } else if (jj_2_12(2)) {
      t = jj_consume_token(ID);
                                  {if (true) return new IdentifierType(t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
        Statement statement;
        StatementList statementList = new StatementList();
        Exp exp = null;
        Exp exp2;
        Statement statement2;
        boolean arrayassign = false;
        Token t;
    if (jj_2_15(2)) {
      jj_consume_token(LCURLYBRACE);
      label_7:
      while (true) {
        if (jj_2_13(2)) {
          ;
        } else {
          break label_7;
        }
        statement = Statement();
                                                  statementList.addElement(statement);
      }
      jj_consume_token(RCURLYBRACE);
          {if (true) return new Block(statementList);}
    } else if (jj_2_16(2)) {
      jj_consume_token(IF);
      jj_consume_token(L_PARENTHESIS);
      exp = Exp();
      jj_consume_token(R_PARENTHESIS);
      statement = Statement();
      jj_consume_token(ELSE);
      statement2 = Statement();
          {if (true) return new If(exp, statement, statement2);}
    } else if (jj_2_17(2)) {
      jj_consume_token(WHILE);
      jj_consume_token(L_PARENTHESIS);
      exp = Exp();
      jj_consume_token(R_PARENTHESIS);
      statement = Statement();
          {if (true) return new While(exp, statement);}
    } else if (jj_2_18(2)) {
      jj_consume_token(PRINT);
      jj_consume_token(L_PARENTHESIS);
      exp = Exp();
      jj_consume_token(R_PARENTHESIS);
      jj_consume_token(SEMICOLON);
          {if (true) return new Print(exp);}
    } else if (jj_2_19(2)) {
      t = jj_consume_token(ID);
      if (jj_2_14(2)) {
        jj_consume_token(LSQUAREBRACKET);
        exp = Exp();
        jj_consume_token(RSQUAREBRACKET);
                  arrayassign = true;
      } else {
        ;
      }
      jj_consume_token(ASSIGNEQUAL);
      exp2 = Exp();
      jj_consume_token(SEMICOLON);
                if(arrayassign)
                        {if (true) return new ArrayAssign(new Identifier(t.image), exp, exp2);}
                else
                        {if (true) return new Assign(new Identifier(t.image), exp2);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
        Exp exp;
    exp = Term();
    exp = ExpPrime(exp);
                {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpPrime(Exp exp) throws ParseException {
        Exp exp2;
    if (jj_2_20(2)) {
      jj_consume_token(PLUS);
      exp2 = Term();
      exp2 = ExpPrime(exp2);
          {if (true) return new Plus(exp, exp2);}
    } else if (jj_2_21(2)) {
      jj_consume_token(MINUS);
      exp2 = Term();
      exp2 = ExpPrime(exp2);
          {if (true) return new Minus(exp, exp2);}
    } else {
          {if (true) return exp;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Term() throws ParseException {
        Exp exp;
    exp = Term2();
    exp = TermPrime(exp);
                {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp TermPrime(Exp exp) throws ParseException {
        Exp exp2;
    if (jj_2_22(2)) {
      jj_consume_token(STAR);
      exp2 = Term2();
      exp2 = TermPrime(exp2);
          {if (true) return new Times(exp, exp2);}
    } else {
          {if (true) return exp;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Term2() throws ParseException {
        Exp exp;
    exp = Fat();
    exp = Term2Prime(exp);
          {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Term2Prime(Exp exp) throws ParseException {
        Exp exp2;
    if (jj_2_23(2)) {
      jj_consume_token(AND);
      exp2 = Fat();
      exp2 = Term2Prime(exp2);
          {if (true) return new And(exp, exp2);}
    } else if (jj_2_24(2)) {
      jj_consume_token(LESS_THAN);
      exp2 = Fat();
      exp2 = Term2Prime(exp2);
          {if (true) return new LessThan(exp, exp2);}
    } else if (jj_2_25(2)) {
      jj_consume_token(DOT);
      exp = Fat2(exp);
          {if (true) return exp;}
    } else if (jj_2_26(2)) {
      jj_consume_token(LSQUAREBRACKET);
      exp2 = Exp();
      jj_consume_token(RSQUAREBRACKET);
          {if (true) return new ArrayLookup(exp, exp2);}
    } else {
          {if (true) return exp;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fat() throws ParseException {
        Exp exp;
        Token t;
    if (jj_2_27(2)) {
      t = jj_consume_token(INTEGER_LITERAL);
                                  {if (true) return new IntegerLiteral(Integer.parseInt(t.image));}
    } else if (jj_2_28(2)) {
      jj_consume_token(TRUE);
                                                  {if (true) return new True();}
    } else if (jj_2_29(2)) {
      jj_consume_token(FALSE);
                                                  {if (true) return new False();}
    } else if (jj_2_30(2)) {
      t = jj_consume_token(ID);
                                                  {if (true) return new IdentifierExp(t.image);}
    } else if (jj_2_31(2)) {
      jj_consume_token(THIS);
                                                  {if (true) return new This();}
    } else if (jj_2_32(2)) {
      jj_consume_token(EXCLAMATION);
      exp = Exp();
                                                  {if (true) return new Not(exp);}
    } else if (jj_2_33(2)) {
      jj_consume_token(L_PARENTHESIS);
      exp = Exp();
      jj_consume_token(R_PARENTHESIS);
                                          {if (true) return exp;}
    } else if (jj_2_34(2)) {
      jj_consume_token(NEW);
      exp = Fat3();
                                          {if (true) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fat2(Exp exp) throws ParseException {
        Token t;
        ExpList expList;
    if (jj_2_35(2)) {
      jj_consume_token(LENGTH);
          {if (true) return new ArrayLength(exp);}
    } else if (jj_2_36(2)) {
      t = jj_consume_token(ID);
      jj_consume_token(L_PARENTHESIS);
      expList = ExpList();
      jj_consume_token(R_PARENTHESIS);
          {if (true) return new Call(exp, new Identifier(t.image), expList);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fat3() throws ParseException {
        Exp exp;
        Token t;
    if (jj_2_37(2)) {
      jj_consume_token(INT);
      jj_consume_token(LSQUAREBRACKET);
      exp = Exp();
      jj_consume_token(RSQUAREBRACKET);
          {if (true) return new NewArray(exp);}
    } else if (jj_2_38(2)) {
      t = jj_consume_token(ID);
      jj_consume_token(L_PARENTHESIS);
      jj_consume_token(R_PARENTHESIS);
          {if (true) return new NewObject(new Identifier(t.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {
        Exp exp;
        ExpList expList = new ExpList();
    if (jj_2_40(2)) {
      exp = Exp();
                                                  expList.addElement(exp);
      label_8:
      while (true) {
        if (jj_2_39(2)) {
          ;
        } else {
          break label_8;
        }
        exp = ExpRest();
                                          expList.addElement(exp);
      }
          {if (true) return expList;}
    } else {
          {if (true) return expList;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpRest() throws ParseException {
        Exp exp;
    jj_consume_token(COMMA);
    exp = Exp();
      {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }
